project/force-app/main/default/objects/Contact/Contact.object-meta.xml
<CustomObject>
    <label>Contact</label>
</CustomObject>