project/force-app/main/default/objects/Contact/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <label>Address</label>
    <type>Text</type>
    <length>255</length>
</CustomField>