project/force-app/main/default/objects/Contact/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <description>Contact Title</description>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Business Development Executive</fullName><default>false</default><label>Business Development Executive</label></value>
            <value><fullName>Business Development Manager</fullName><default>false</default><label>Business Development Manager</label></value>
            <value><fullName>Director of Business Development</fullName><default>false</default><label>Director of Business Development</label></value>
            <value><fullName>CEO</fullName><default>false</default><label>CEO</label></value>
            <value><fullName>Chairman</fullName><default>false</default><label>Chairman</label></value>
            <value><fullName>Account Director</fullName><default>false</default><label>Account Director</label></value>
            <value><fullName>Account Executive</fullName><default>false</default><label>Account Executive</label></value>
            <value><fullName>Account Manager</fullName><default>false</default><label>Account Manager</label></value>
            <value><fullName>Brand Designer</fullName><default>false</default><label>Brand Designer</label></value>
            <value><fullName>Brand Manager</fullName><default>false</default><label>Brand Manager</label></value>
            <value><fullName>Event Executive</fullName><default>false</default><label>Event Executive</label></value>
            <value><fullName>Event Manager</fullName><default>false</default><label>Event Manager</label></value>
            <value><fullName>Event Team Leader</fullName><default>false</default><label>Event Team Leader</label></value>
            <value><fullName>CMO</fullName><default>false</default><label>CMO</label></value>
            <value><fullName>Business Operation Manager</fullName><default>false</default><label>Business Operation Manager</label></value>
            <value><fullName>Purchasing Executive</fullName><default>false</default><label>Purchasing Executive</label></value>
            <value><fullName>Purchasing Manager</fullName><default>false</default><label>Purchasing Manager</label></value>
            <value><fullName>Founder/ Owner</fullName><default>false</default><label>Founder/Owner</label></value>
            <value><fullName>President</fullName><default>false</default><label>President</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>