project/force-app/main/default/objects/Contact/fields/Province_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Province_Code_1__c</fullName>
    <label>Province Code</label>
    <type>Text</type>
    <length>255</length>
</CustomField>