project/force-app/main/default/objects/Contact/fields/Ward_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Ward_Code_1__c</fullName>
    <label>Ward Code</label>
    <type>Text</type>
    <length>255</length>
</CustomField>