project/force-app/main/default/objects/Contact/validationRules/Require_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Account</fullName>
    <active>true</active>
    <description>Contact must be linked to a Tenant</description>
    <errorConditionFormula>ISBLANK(AccountId)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Contact must be linked to a Tenant (Account).</errorMessage>
</ValidationRule>