project/force-app/main/default/objects/Contact/validationRules/Require_Phone_Or_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Phone_Or_Email</fullName>
    <active>true</active>
    <description>Phone or Email is required</description>
    <errorConditionFormula>AND(ISBLANK(Phone), ISBLANK(Email))</errorConditionFormula>
    <errorMessage>Must enter at least Phone or Email for contact.</errorMessage>
</ValidationRule>